--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".welcomePage">
 
+    <include
+        layout="@layout/toolbar_main"
+        android:id="@+id/toolbar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
