--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -28,7 +28,8 @@
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toStartOf="@+id/gamesAvailable"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeIntro" />
+        app:layout_constraintTop_toBottomOf="@+id/welcomeIntro"
+        android:text="@string/player_profile_button"/>
 
     <Button
         android:id="@+id/gamesAvailable"
