--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -29,7 +29,9 @@
         app:layout_constraintEnd_toStartOf="@+id/gamesAvailable"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeIntro"
-        android:text="@string/player_profile_button"/>
+        android:text="@string/player_profile_button"
+        android:onClick="onPlayerProfileClick"
+        tools:ignore="UsingOnClickInXml" />
 
     <Button
         android:id="@+id/gamesAvailable"
