--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:text="Games Available"
-        android:onClick="onPlayerProfileClick"
+        android:onClick="onGamesAvailableClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeIntro" />
 
