--- a/app/src/main/res/layout/activity_games_available.xml
+++ b/app/src/main/res/layout/activity_games_available.xml
@@ -14,6 +14,7 @@
         android:id="@+id/loadGames"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:theme="@style/Buttons.whiteBlue"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="12dp"
