--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:id="@+id/email_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:theme="@style/TextAppearance.Pretty"
             android:text="@string/email"
             app:layout_constraintBottom_toBottomOf="@id/email"
             app:layout_constraintEnd_toStartOf="@id/email"
@@ -46,6 +47,7 @@
             android:id="@+id/password_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:theme="@style/TextAppearance.Pretty"
             android:text="@string/password_label"
             app:layout_constraintBottom_toBottomOf="@id/password"
             app:layout_constraintEnd_toStartOf="@id/password"
