--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
+        android:theme="@style/TextAppearance.Pretty"
         android:text="@string/gender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="24dp"
+        android:theme="@style/TextAppearance.Pretty"
         android:text="@string/weight"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userGender" />
@@ -34,6 +36,7 @@
         android:id="@+id/userAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/TextAppearance.Pretty"
         android:layout_marginStart="20dp"
         android:layout_marginTop="36dp"
         android:text="@string/age"
@@ -79,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:theme="@style/Buttons.whiteBlue"
         app:layout_constraintTop_toBottomOf="@+id/ageFire"
         app:layout_constraintStart_toStartOf="parent"
         android:onClick="onClickUpdateProfile"
