--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,10 @@
         <item name="android:colorButtonNormal">#090F71</item>
         <item name="android:textColor">#F8F9FB</item>
     </style>
+    <style name="TextAppearance.Pretty" parent="ThemeOverlay.AppCompat" >
+        <item name="android:textColor">#000000</item>
+        <item name="android:fontFamily">SANS_SERIF</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 
 </resources>
