Clean up, converted gamesAvailable to card layout, created GamesRecyclerAdapter -christina nguyen

--- a/app/src/main/res/layout/activity_games_available.xml
+++ b/app/src/main/res/layout/activity_games_available.xml
@@ -10,26 +10,27 @@
         layout="@layout/toolbar_main"
         android:id="@+id/toolbar" />
 
-    <Button
-        android:id="@+id/loadGames"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:theme="@style/Buttons.whiteBlue"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="12dp"
-        android:onClick="onLoadGamesClick"
-        android:text="load games"/>
 
-    <ListView
-        android:id="@+id/gamesListView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/loadGames"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="12dp" />
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:text="Choose a game:"
+            android:textSize="24sp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:scrollbars="vertical"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
