--- a/app/src/main/res/layout/activity_games_available.xml
+++ b/app/src/main/res/layout/activity_games_available.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
-            android:text="Choose a game:"
+            android:text="@string/games_avail_header"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintStart_toStartOf="parent"
