--- a/app/src/main/res/layout/games_available_item_card.xml
+++ b/app/src/main/res/layout/games_available_item_card.xml
@@ -12,20 +12,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/game_banner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/game_banner"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:scaleType="centerCrop"/>-->
 
         <TextView
             android:id="@+id/game_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textStyle="bold|italic"/>
+            android:textStyle="bold|italic"
+            android:layout_marginLeft="10dp"/>
 
     </LinearLayout>
 
